# drf-api-

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
Blog/: settings.py  urls.py
blog/: models.py  serializers.py  tests.py  views.py
blog/migrations/: 0001_initial.py
