[tool.poetry]
name = "drf-api"
version = "0.1.0"
description = ""
authors = ["Noura-Alquran <nmalquran15@eng.just.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
Django = "^3.2.4"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
